PLAT-41399-Added CSS property to handle down/up arrow key autocomplete query selection.

--- a/frontend/src/style/bootstrap/attivio-search-shared.less
+++ b/frontend/src/style/bootstrap/attivio-search-shared.less
@@ -33,6 +33,10 @@
   background-color: #d6effa;
   color: #111;
 }
+
+.attivio-dropdown .dropdown-menu > li.active > a {
+	background-color: #d6effa;
+}
 .attivio-dropdown.open [data-toggle] {
 	text-decoration: none;
 }
