--- a/searchui-frontend/src/style/bootstrap/attivio-search-results.less
+++ b/searchui-frontend/src/style/bootstrap/attivio-search-results.less
@@ -125,13 +125,17 @@
 .attivio-search-result-preview-noborder {
 	border: none;
 }
+
+.attivio-search-result-title-default {
+  font-size: 1.214285714286em; /* 17px /14 */
+}
 .attivio-search-result-title {
-	font-size: 1.214285714286em; /* 17px /14 */
-	font-weight: 400;
+  font-weight: 400;
   margin-top: 0;
   word-break: break-word;
   text-overflow: ellipsis;
 }
+
 .attivio-search-result-desc {
 	font-size: 0.9285714285714em; /* 13px /14 */
   max-width: 53.84615384615em; /* 700px /13 */
